quic_framer.cc: Fix MSVC warning about signed/unsigned mismatch in comparison

num_ack_blocks is a uint8_t, so "num_ack_blocks - 1" would have type int, causing
MSVC to warn.

TBR=rch

Bug: 817722
Change-Id: I4d9cbc0cf266dc00174ab73f66d80e56fc007ad2
Reviewed-on: https://chromium-review.googlesource.com/941945
Commit-Queue: Hans Wennborg <hans@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540133}
Former-commit-id: 151f8d4cb79a6ab60259b08d4b4373bcc05ded24